[gd_scene load_steps=5 format=3 uid="uid://c8xqyqxvqxqxq"]

[ext_resource type="Script" path="res://scripts/main_ui.gd" id="1_main_ui"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ground"]
albedo_color = Color(0.3, 0.35, 0.25, 1)

[sub_resource type="BoxMesh" id="BoxMesh_ground"]
size = Vector3(40, 0.2, 40)
material = SubResource("StandardMaterial3D_ground")

[sub_resource type="BoxShape3D" id="BoxShape3D_ground"]
size = Vector3(40, 0.2, 40)

[node name="Main" type="Node3D"]

[node name="Battlefield" type="Node3D" parent="."]

[node name="Ground" type="StaticBody3D" parent="Battlefield"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)
collision_layer = 1
collision_mask = 0

[node name="MeshInstance3D" type="MeshInstance3D" parent="Battlefield/Ground"]
mesh = SubResource("BoxMesh_ground")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Battlefield/Ground"]
shape = SubResource("BoxShape3D_ground")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 35, 20)
fov = 60.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.25, 0.433013, 0, 0.866025, 0.5, -0.5, -0.433013, 0.75, 0, 20, 0)
shadow_enabled = true

[node name="Units" type="Node3D" parent="."]

[node name="Projectiles" type="Node3D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("1_main_ui")

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftPanel" type="VBoxContainer" parent="UI/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
size_flags_vertical = 3

[node name="Team1Label" type="Label" parent="UI/HBoxContainer/LeftPanel"]
text = "TEAM 1 (Blue)"
horizontal_alignment = 1

[node name="SpawnButton1" type="Button" parent="UI/HBoxContainer/LeftPanel"]
custom_minimum_size = Vector2(0, 60)
text = "Spawn Unit"

[node name="Score1Label" type="Label" parent="UI/HBoxContainer/LeftPanel"]
text = "Kills: 0"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="UI/HBoxContainer"]
size_flags_horizontal = 3

[node name="RightPanel" type="VBoxContainer" parent="UI/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
size_flags_vertical = 3

[node name="Team2Label" type="Label" parent="UI/HBoxContainer/RightPanel"]
text = "TEAM 2 (Red)"
horizontal_alignment = 1

[node name="SpawnButton2" type="Button" parent="UI/HBoxContainer/RightPanel"]
custom_minimum_size = Vector2(0, 60)
text = "Spawn Unit"

[node name="Score2Label" type="Label" parent="UI/HBoxContainer/RightPanel"]
text = "Kills: 0"
horizontal_alignment = 1
